🆕 feat: get did doc history endpoint
